--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "dependencies": {
     "@sendgrid/mail": "^7.4.2",
     "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.7",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "sharp": "^0.28.1",
     "validator": "^13.6.0"
